--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -193,3 +193,9 @@ ja:
       long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       short: "%y/%m/%d %H:%M"
     pm: 午後
+  views:
+    pagination:
+      first: "First"
+      last:  "Last"
+      next: ""
+      previous: ""
